<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_world_p109</name>
  <version>1.0.0</version>
  <description>Gazebo world of a P109 laboratory at polish WUT</description>
  <maintainer email="dan.gield@gmail.com">Daniel Giełdowski</maintainer>
  <license>Apache License 2.0</license>

  <author email="dan.gield@gmail.com">Daniel Giełdowski</author>
 
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  
  <!-- <exec_depend>launch_ros</exec_depend> -->
  <exec_depend>xacro</exec_depend>
  <!-- <exec_depend>gazebo</exec_depend> -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Gazebo exports -->
    <gazebo_ros gazebo_media_path="${prefix}:/usr/share/gazebo-11"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
